# interaction-bandit

bandit_driver_prototype/: mainpage.dox  manifest.xml
bandit_driver_prototype/launch/: bandit_driver.launch
bandit_driver_prototype/nodelets/: bandit_driver.cpp  nodelet_plugins.xml
bandit_driver_prototype/nodes/: bandit_driver.cpp
bandit_driver_prototype/params/: joints.yaml  (+1 more)
bandit_urdf/: CMakeLists.txt  bandit.launch  bandit3_urdf.xml  bandit_defs.xml  bandit_gazebo.launch  bandit_shirt.launch  controller.launch  manifest.xml
bandit_urdf/controller/: head.yaml
bandit_urdf/defs/: bandit_defs.xacro  bandit_shirt_defs.xacro  common.xacro  gazebo.urdf.xacro  head.gazebo.xacro  head.transmission.xacro  head.xacro  logo.xacro  materials.xacro  old_head.xacro  pioneer2dx.xacro  pioneerbase.xacro  screws.xacro  shirt_materials.xacro  shoulder.xacro  stage.xacro  torso.gazebo.xacro  torso.xacro
bandit_urdf/defs/gazebo/: bandit_shirt_defs.xacro  head.xacro  shoulder.xacro  torso.xacro
bandit_urdf/launch/: upload_bandit.launch  upload_bandit_shirt.launch  upload_pioneer2dx.launch
bandit_urdf/src/: parser.cc
bandit_urdf/urdf/: bandit.gazebo  bandit_defs.urdf.xacro  bandit_shirt_defs.urdf.xacro
libbandit/: CMakeLists.txt  CMakeLists.txt.ros  CMakeLists.txt.standalone  Makefile.standalone  manifest.xml
libbandit/include/bandit/: bandit.h  joint_name.h  smartservo.h
libbandit/include/bandit/details/: bandit_impl.h
libbandit/src/: CMakeLists.txt  bandit.cpp  joint_name.cpp  smartservo.cpp
libbandit/tests/: CMakeLists.txt  servohold.cpp  testbandit.cpp
(+11 files in other folders)
